--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,32 @@
     width: 100%;
     z-index: 100;
 }
+
+
+.fade-in-section {
+  opacity: 0;
+  transform: translateY(20vh);
+  visibility: hidden;
+  transition: opacity 0.6s ease-out, transform 1.2s ease-out;
+  will-change: opacity, visibility;
+}
+.fade-in-section.is-visible {
+  opacity: 1;
+  transform: none;
+  visibility: visible;
+}
+
+
+/* CustomSlider.css */
+.slick-dots {
+  bottom: 4px; /* Adjust the vertical position of the dots */
+  size: 18px;
+}
+
+.slick-dots li button {
+  font-size: 18px;
+}
+
+.slick-dots li.slick-active button {
+  color: #ff0000; /* Change the color of the active dot */
+}
